syntax = "proto3";

option go_package = "paint/internal/microservice/proto";
option java_multiple_files = true;
option java_package = "io.grpc.paint.image.processing.service";
option java_outer_classname = "ImageProcessingService";

package promo;

//https://bitbucket.org/blog/writing-a-microservice-in-golang-which-communicates-over-grpc

service ImageProcessingService {
  rpc PyrMeanShiftFilter (PyrMeanShiftFilterParams) returns (PyrMeanShiftFilterResult) {}
}

message PyrMeanShiftFilterParams {
  string result = 1;
}


message PyrMeanShiftFilterResult {
  string message = 1;
}
